@@ -35,3 +35,4 @@ graph.refresh_targets.shortcut=ctrl pressed R
 connect.db_connect.string=root\:"toor"@127.0.0.1/msf3
 connect.db_driver.string=mysql
 armitage.string.target_view=graph
+console.select_all.shortcut=ctrl pressed A
