@@ -6,6 +6,7 @@ In Progress
 - Organized View menu (it was getting out of control)
 - Added RPC Console item to view menu (Start MSF only). This item will show
   the STDOUT for msfrpcd. Use this to view nmap's output.
+- Added Ctrl+A shortcut to select all text in a console tab
 
 21 Jan 11 Changes
 --------- 
